# Cipher

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  readme.md
.github/workflows/: cipher-ci.yml
src/: run.py
src/data/: buffer.py  text_data.py
src/decoders/: factory.py  rot.py  rot_13.py  rot_47.py
src/file_handlers/: file_handler.py  filehandlerfactory.py  json_file_handler.py
src/managers/: manager.py
tests/data/: test_buffer.py
tests/decoders/: test_cipher_factory.py  test_rot13.py  test_rot47.py
tests/file_handlers/: test_file_handler_factory.py  test_json_file_handler.py
tests/managers/: test_manager.py
