[tool.poetry]
name = "cipher"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.11"
pre-commit = "^4.0.1"
pytest = "^8.3.4"
ruff = "^0.8.4"
safety = "^3.2.14"
bandit = "^1.8.0"
coverage = "^7.6.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
